fix: force load latest LiteDB.dll binary into project
for some reason, i couldn't load it the normal way, and i can't troubleshoot it

--- a/AdofaiTweaks.Generator/AdofaiTweaks.Generator.csproj
+++ b/AdofaiTweaks.Generator/AdofaiTweaks.Generator.csproj
@@ -52,8 +52,8 @@
     <Reference Include="ExcelDataReader.DataSet, Version=3.6.0.0, Culture=neutral, PublicKeyToken=93517dbe6a4012fa, processorArchitecture=MSIL">
       <HintPath>..\packages\ExcelDataReader.DataSet.3.6.0\lib\net35\ExcelDataReader.DataSet.dll</HintPath>
     </Reference>
-    <Reference Include="LiteDB, Version=5.0.10.0, Culture=neutral, PublicKeyToken=4ee40123013c9f27, processorArchitecture=MSIL">
-      <HintPath>..\packages\LiteDB.5.0.10\lib\net45\LiteDB.dll</HintPath>
+    <Reference Include="LiteDB">
+      <HintPath>..\AdofaiTweaks\ExternalDependencies\LiteDB.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
