--- a/AdofaiTweaks/AdofaiTweaks.csproj
+++ b/AdofaiTweaks/AdofaiTweaks.csproj
@@ -66,8 +66,8 @@
     <Reference Include="DOTweenPro">
       <HintPath>ExternalDependencies\DOTweenPro.dll</HintPath>
     </Reference>
-    <Reference Include="LiteDB, Version=5.0.10.0, Culture=neutral, PublicKeyToken=4ee40123013c9f27, processorArchitecture=MSIL">
-      <HintPath>..\packages\LiteDB.5.0.10\lib\net45\LiteDB.dll</HintPath>
+    <Reference Include="LiteDB">
+      <HintPath>ExternalDependencies\LiteDB.dll</HintPath>
     </Reference>
     <Reference Include="PresentationCore" />
     <Reference Include="RDTools">
@@ -255,6 +255,7 @@
   </Target>
   <ItemGroup>
     <PackageReference Include="Microsoft.NETFramework.ReferenceAssemblies.net48" Version="1.0.3" PrivateAssets="all" />
+    <PackageReference Include="LiteDB" Version="5.0.21" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="ExternalDependencies\.gitignore" />
