fix: add System.Buffers dependency

--- a/AdofaiTweaks.Generator/AdofaiTweaks.Generator.csproj
+++ b/AdofaiTweaks.Generator/AdofaiTweaks.Generator.csproj
@@ -56,6 +56,9 @@
       <HintPath>..\AdofaiTweaks\ExternalDependencies\LiteDB.dll</HintPath>
     </Reference>
     <Reference Include="System" />
+    <Reference Include="System.Buffers">
+      <HintPath>..\packages\System.Buffers.4.5.1\lib\net461\System.Buffers.dll</HintPath>
+    </Reference>
     <Reference Include="System.Data" />
     <Reference Include="System.IO.Compression" />
     <Reference Include="System.Runtime" />
